minor australia change

--- a/views/australia.jade
+++ b/views/australia.jade
@@ -76,7 +76,7 @@ html.
       </h3>
     
       <div id="description">
-        This photo is another one of Lauren's favorites!  Her husband took these photos of the Sydney Opera House in 2011.
+        This photo is another one of Alberto's favorites!  Her husband took these photos of the Sydney Opera House in 2011.
       </div>
       
       <h3>
